--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
-    <title>Head Title</title>
+    <!-- Link to Moment.js -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <title>NY Train</title>
 </head>
 
 <body>
@@ -42,6 +44,8 @@
                             <td>Jersey Shore Train</td>
                             <td>New York City</td>
                             <td>45 minutes</td>
+                            <td id="nextTrain">''</td>
+                            <td id="minTillTrain">''</td>
                         </tr>
                     </tbody>
                 </table>
